--- a/angular-news-api/src/app/pages/not-found-page/not-found-page.component.html
+++ b/angular-news-api/src/app/pages/not-found-page/not-found-page.component.html
@@ -1,3 +1,7 @@
-<div>
-    404: NOT FOUND
+<div class="not-found-container">
+    <div class="not-found">
+        <img src='assets/404.svg'/>
+        <div> 404. Not found</div>
+        <a  [routerLink]="['/']"> Go to Main</a>
+    </div>  
 </div>
