--- a/angular-news-api/src/styles.less
+++ b/angular-news-api/src/styles.less
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: 'OpenSans';
+    src: url('./assets/fonts/opensans-regular-webfont.eot');
+    src: url('./assets/fonts/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./assets/fonts/opensans-regular-webfont.woff2') format('woff2'),
+         url('./assets/fonts/opensans-regular-webfont.woff') format('woff'),
+         url('./assets/fonts/opensans-regular-webfont.ttf') format('truetype'),
+         url('./assets/fonts/opensans-regular-webfont.svg#open_sansregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body{
+    font-family: 'OpenSans';
+    font-size: 14px;   
+    margin: 0;
+    height: 100vh;
+    padding: 0;    
+    width: 100%;
+}
